--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       </li>
       <li><a href="http://facebook.com">Link to Facebook</a>
         </li>
-  </ol>
-  <h2>Header 2</h2>
+</ol>
+  <h2>Some things I say:</h2>
+  <ul>Hello binches.</ul>
   <h3>Header 3</h3>
 
 </html>
