--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <h1>About Me</h1>
+<link rel="stylesheet" href="custom.css">
+
+  <h1 class= "purpletext">About Me</h1>
+
   <p> My name is Ying Xuan and I am a meme queen. </p>
   <ul>
     <li>I also make pretty nice telegram stickers.</li>
